k8s/overlays/prod/patches/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-admin-route
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway
  hostnames:
  - "agentgateway-admin.neuraltrust.ai"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-proxy-route
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway
  hostnames:
  - "agentgateway.neuraltrust.ai"
  - "gateway-llm.neuraltrust.ai"
  - "*.llm.neuraltrust.ai"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-mcp-route
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway
  hostnames:
  - "agentgateway-mcp.neuraltrust.ai"
  - "gateway-mcp.neuraltrust.ai"
  - "*.mcp.neuraltrust.ai"
